components/markdown-styles.module.css
/* rewritten with nesting */
.markdown {
  @apply text-lg;
  /* fixing RT renderer problems */
  ul, ol, blockquote {
    @apply ml-8 mb-5;
    list-style-type: disc;
  }
  li p {
    margin-bottom: 0.5em;
    @apply leading-6;
  }
  /* blockquote {
    @apply ml-8;
  } */
  /* remove this if RT "extra p" list rendering is ever fixed. -AW */
  blockquote p {
    @apply text-xl italic opacity-90;
    margin-bottom: 0.5em;
  }

  h2, h3, h4, h5 {
    @apply font-sans leading-snug;
    margin-top: 1.2em;
    margin-bottom: 0.5em;
  }
  h2 {
    @apply text-3xl font-bold text-gray-800;
  }
  h3 {
    @apply text-2xl;
  }
  h2 + h3, h3 + h4 {
    margin-top: 0;
  }
  p:empty { display:none; }

  a {
    text-decoration: underline;
    text-decoration-thickness: .125em;
    text-underline-offset: 1.5px;
    text-decoration-color: var(--link-color);
  }
  a:hover, a:focus {
    color: var(--link-hover);
    text-decoration-color: var(--link-color);
  }
}

